# keeper-sdk-python

./: .gitattributes  .gitignore  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py
keepercli-package/: mypy.ini  requirements.txt  setup.cfg
keepercli-package/src/keepercli/: __init__.py  __main__.py  api.py  autocomplete.py  cli.py  constants.py  login.py  params.py  prompt_utils.py  register_commands.py  versioning.py  yubikey.py
keepercli-package/src/keepercli/biometric/: __init__.py  client.py
keepercli-package/src/keepercli/biometric/commands/: base.py  list.py  register.py  unregister.py  update_name.py  verify.py
keepercli-package/src/keepercli/biometric/utils/: error_handler.py
keepercli-package/src/keepercli/commands/: __init__.py  account_commands.py  action_report.py  aging_report.py  audit_alert.py  audit_log.py  audit_report.py  base.py  breachwatch.py  cli_commands.py  command_completer.py  command_visibility.py  compliance.py  device_management.py  enterprise_command.py  enterprise_create_user.py  enterprise_info.py  enterprise_node.py  enterprise_push.py  enterprise_role.py  enterprise_team.py  enterprise_user.py  enterprise_utils.py  ext_shares_report.py  importer_commands.py  keeper_fill.py  ksm_utils.py  msp.py  notification.py  nsf_commands.py  password_generate.py  password_report.py  password_reset.py  pedm.py  pedm_admin.py  pedm_agent.py  pedm_aram.py  record_edit.py  record_file_report.py  record_handling_commands.py  (+19 more)
keepercli-package/src/keepercli/commands/pam/: keeper_pam.py  pam_config.py  pam_connection.py  pam_dto.py  pam_gateway_action.py  pam_rbi.py  pam_rotation.py
keepercli-package/src/keepercli/helpers/: email_utils.py  folder_utils.py  gateway_utils.py  ksm_utils.py  parse_utils.py  password_utils.py  record_utils.py  report_utils.py  router_utils.py  share_record.py  share_utils.py  timeout_utils.py
keepercli-package/src/keepercli/import_plugins/: keepass.py  lastpass.py
keepercli-package/src/keepercli/import_plugins/lastpass_lib/: account.py  attachment.py  attachment_reader.py  blob.py  chunk.py  exceptions.py  fetcher.py  parser.py  session.py  shared_folder.py  vault.py  version.py
keepercli-package/unit_tests/: completer.py  test_device_management.py
keepersdk-package/: README.md  mypy.ini  requirements.txt  setup.cfg
keepersdk-package/manual_tests/: test_enterprise.py  test_user.py
keepersdk-package/src/keepersdk/: __init__.py  background.py  constants.py  crypto.py  generator.py  sqlite_dao.py  utils.py
keepersdk-package/src/keepersdk/authentication/: auth_utils.py  breachwatch.py  configuration.py  device_management.py  endpoint.py  keeper_auth.py  login_auth.py  notifications.py  push_notifications.py  two_fa_utils.py  yubikey.py
keepersdk-package/src/keepersdk/enterprise/: account_transfer.py  action_report.py  aging_report.py  batch_management.py  breachwatch_report.py  compliance.py  enterprise_data.py  enterprise_loader.py  enterprise_management.py  enterprise_push.py  enterprise_types.py  enterprise_user_management.py  legacy_enterprise.py  loader.py  msp_auth.py  private_data.py  security_audit_report.py  sqlite_enterprise_storage.py  user_report.py
keepersdk-package/src/keepersdk/helpers/: config_utils.py  gateway_utils.py  pam_config_facade.py  pam_user_record_facade.py  router_utils.py
keepersdk-package/src/keepersdk/helpers/keeper_dag/: __init__.py  connection.py  constants.py  dag.py  dag_crypto.py  dag_edge.py  dag_sort.py  dag_types.py  dag_utils.py  dag_vertex.py  infrastructure.py  jobs.py  process.py  record_link.py  rule.py  (+1 more)
keepersdk-package/src/keepersdk/importer/: import_data.py  import_utils.py  keeper_format.py
keepersdk-package/src/keepersdk/proto/: APIRequest_pb2.py  APIRequest_pb2.pyi  AccountSummary_pb2.py  AccountSummary_pb2.pyi  BI_pb2.py  BI_pb2.pyi  DeviceManagement_pb2.py  GraphSync_pb2.py  GraphSync_pb2.pyi  NotificationCenter_pb2.py  NotificationCenter_pb2.pyi  SyncDown_pb2.py  SyncDown_pb2.pyi  automator_pb2.py  automator_pb2.pyi  breachwatch_pb2.py  breachwatch_pb2.pyi  client_pb2.py  client_pb2.pyi  dag_pb2.py  enterprise_pb2.py  enterprise_pb2.pyi  folder_access_pb2.pyi  folder_pb2.py  folder_pb2.pyi  pam_pb2.py  pam_pb2.pyi  pedm_pb2.py  pedm_pb2.pyi  push_pb2.py  push_pb2.pyi  record_endpoints_pb2.pyi  record_pb2.py  record_pb2.pyi  record_sharing_pb2.py  router_pb2.py  router_pb2.pyi  ssocloud_pb2.py  ssocloud_pb2.pyi  tla_pb2.py  (+2 more)
keepersdk-package/src/keepersdk/storage/: dag.py  in_memory.py  sqlite.py  storage_types.py  types.py
keepersdk-package/src/keepersdk/vault/: attachment.py  batch_operations.py  external_shares_report.py  folder_management.py  keeperdrive_crypto.py  keeperdrive_data.py  keeperdrive_models.py  keeperdrive_storage_types.py  keeperdrive_sync.py  keeperdrive_vault_storage.py  ksm.py  ksm_management.py  memory_keeperdrive_storage.py  memory_nsf_storage.py  memory_storage.py  nsf_common.py  nsf_crypto.py  nsf_data.py  nsf_folder_records.py  nsf_management.py  nsf_sharing.py  nsf_storage_types.py  nsf_sync.py  nsf_vault_storage.py  one_time_share.py  record_facades.py  record_management.py  record_type_management.py  record_type_utils.py  record_types.py  share_management_utils.py  share_report.py  shared_record.py  shared_records_report.py  shares_management.py  skip_sync.py  sqlite_keeperdrive_storage.py  sqlite_nsf_storage.py  sqlite_storage.py  storage_types.py  (+11 more)
keepersdk-package/unit_tests/: data_vault.py  test_configuration.py  test_crypto.py  test_device_management.py  test_keeperdrive_sync.py  test_ksm_management.py  test_login.py  test_memory_storage.py  test_nsf_management.py  test_nsf_sync.py  test_passphrase_generator.py  test_pedm.py  test_record_type_management.py  test_share_rotate_on_expiration.py  test_sqlite_dao.py  test_sync_down.py  test_utils.py  test_vault_storage.py
(+468 files in other folders)
