[metadata]
name = keepersdk
version = attr: keepersdk.__init__.__version__
description = Keeper SDK for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
author = attr: keepersdk.__init__.__author__
author_email = commander@keepersecurity.com
url = https://github.com/Keeper-Security/keeper-sdk-python
license = attr: keepersdk.__init__.__license__
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Security
keywords = security, password
python_requires = >=3.7

[options]
packages = find:
include_package_data = True
install_requires =
    requests>=2.27.0
    cryptography>=36.0.0
    protobuf>=4.21.1
    websocket-client>=1.3.0

[options.package_data]
keepersdk =
  resources/*