[metadata]
name = cli-test-beta
version = attr: keepercli.__init__.__version__
description = Keeper Commander for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
author = Abdul Deshmukh
author_email = adeshmukh@keepersecurity.com
url = https://github.com/Keeper-Security/keeper-sdk-python/tree/deploy-test
license = MIT
classifiers =
    Environment :: Console
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Security
keywords = security, password

[options]
python_requires = >=3.8
package_dir =
    = src
include_package_data = True
install_requires =
    prompt-toolkit
    pyperclip
    tabulate
    asciitree
    colorama
    cbor2; sys_platform == "darwin" and python_version>='3.10'
    pyobjc-framework-LocalAuthentication; sys_platform == "darwin" and python_version>='3.10'
    winrt-runtime; sys_platform == "win32"
    winrt-Windows.Foundation; sys_platform == "win32"
    winrt-Windows.Security.Credentials.UI; sys_platform == "win32"
    --extra-index-url https://test.pypi.org/simple/
    sdk-test-beta

[options.package_data]
keepercli =
  resources/*

[options.extras_require]
import =
    pykeepass

[options.entry_points]
console_scripts =
    keeper = keepercli.__main__:main
