[metadata]
name = keepersdk
version = attr: keepersdk.__init__.__version__
description = Keeper SDK for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
author = Keeper Security Inc.
author_email = commander@keepersecurity.com
url = https://github.com/Keeper-Security/keeper-sdk-python
license = MIT
classifiers =
    Environment :: Console
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Security
keywords = security, password

[options]
python_requires = >=3.7
package_dir =
    = src
include_package_data = True
install_requires =
    requests>=2.27.0
    cryptography>=36.0.0
    protobuf>=4.21.1
    websocket-client>=1.3.0

[options.package_data]
keepersdk =
  resources/*