[metadata]
name = sdk-test-beta
version = attr: keepersdk.__init__.__version__
description = Keeper SDK for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
author = Abdul Deshmukh
author_email = adeshmukh@keepersecurity.com
url = https://github.com/Keeper-Security/keeper-sdk-python/tree/deploy-test
license = MIT
classifiers =
    Environment :: Console
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Security
keywords = security, password

[options]
python_requires = >=3.10
package_dir =
    = src
include_package_data = True
install_requires =
    attrs>=23.1.0
    certifi
    requests>=2.31.0
    cryptography>=41.0.7
    protobuf>=5.28.3
    websockets>=12.0
    fido2>=2.0.0; python_version>='3.10'
    

[options.package_data]
keepersdk =
  resources/*